--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -4,12 +4,12 @@
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
         <param name="onload" value="true" />
     </feature>
-    <name>Suyo_Security</name>
+    <name>Suyo Security</name>
     <description>
         A sample Apache Cordova application that responds to the deviceready event.
     </description>
     <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+        Ingeniero Jeisson IBargüen Maturana
     </author>
     <content src="index.html" />
     <icon src="www/img/logo.png" />
@@ -26,5 +26,5 @@
     <icon density="hdpi" src="www/img/logo.png" />
     <icon density="xhdpi" src="www/img/logo.png" />
     <preference name="loglevel" value="DEBUG" />
-    <preference name="Orientation" value="landscape" />
+    <preference name="Orientation" value="portrait" />
 </widget>
