--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -21,10 +21,14 @@
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
     <allow-intent href="market:*" />
-    <icon density="ldpi" src="www/img/logo.png" />
-    <icon density="mdpi" src="www/img/logo.png" />
-    <icon density="hdpi" src="www/img/logo.png" />
-    <icon density="xhdpi" src="www/img/logo.png" />
+    <splash density="land-hdpi" src="www/img/logo.png" />
+    <splash density="land-ldpi" src="www/img/logo.png" />
+    <splash density="land-mdpi" src="www/img/logo.png" />
+    <splash density="land-xhdpi" src="www/img/logo.png" />
+    <splash density="port-hdpi" src="www/img/logo.png" />
+    <splash density="port-ldpi" src="www/img/logo.png" />
+    <splash density="port-mdpi" src="www/img/logo.png" />
+    <splash density="port-xhdpi" src="www/img/logo.png" />
     <preference name="loglevel" value="DEBUG" />
     <preference name="Orientation" value="portrait" />
 </widget>
